Add connect in post

--- a/backend/views/signup.html
+++ b/backend/views/signup.html
@@ -14,6 +14,9 @@
       <label>Giới tính</label><br>
       <input type="text" size="25" id="gender" name="gender"/><br><br>
 
+      <label>Ngày sinh</label><br>
+      <input type="text" size="25" id="birth" name="birth"/><br><br>
+
       <label>Email</label><br>
       <input type="text" size="25" id="email" name="email"/><br><br>
 
