--- a/frontend/src/components/Button.css
+++ b/frontend/src/components/Button.css
@@ -2,7 +2,7 @@
   --primary: #fff;
 }
 
-.btn {
+.btn3 {
   padding: 8px 20px;
   border-radius: 2px;
   outline: none;
@@ -10,13 +10,13 @@
   cursor: pointer;
 }
 
-.btn--primary {
+.btn--primary1 {
   background-color: var(--primary);
   color: #242424;
   border: 1px solid var(--primary);
 }
 
-.btn--outline {
+.btn--outline1 {
   background-color: transparent;
   color: #fff;
   padding: 8px 20px;
@@ -24,18 +24,18 @@
   transition: all 0.3s ease-out;
 }
 
-.btn--medium {
+.btn--medium1 {
   padding: 8px 20px;
   font-size: 18px;
 }
 
-.btn--large {
+.btn--large1 {
   padding: 12px 26px;
   font-size: 20px;
 }
 
-.btn--large:hover,
-.btn--medium:hover {
+.btn--large1:hover,
+.btn--medium1:hover {
   transition: all 0.3s ease-out;
   background: #fff;
   color: #242424;
