--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -1,30 +1,128 @@
-.flex-col {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  min-height: 321px;
-  width: 1098px;
+.Post{
+  text-align: center;
 }
-
-.overlap-group-container {
-  align-items: flex-start;
+.frame-general {
+  align-items: left;
   display: flex;
-  min-width: 1098px;
-}
-
-.overlap-group1 {
-  height: 85px;
+  height: 120px;
+  /*justify-content: flex-end;*/
+  margin-top: 20px;
+  margin-left: 0;
   position: relative;
-  width: 766px;
 }
 
+.title-container-head {
+  height: 70px;
+  position: relative;
+  margin-left: 10%;
+  width: 50%;
+}
 
-.placeholder-title {
-  align-items: flex-start;
+.placeholder-title-head {
   display: flex;
-  height: 59px;
-  min-width: 744px;
+  height: 100%;
+  width: 100%;
+  /*background-color: aqua;*/
+  position: absolute;
+  top: 0;
 }
+
+.text-title-head {
+  height: 100%;
+  width: 100%;
+  text-align: left;
+  letter-spacing: 0;
+  white-space: wrap;
+  inline-size: 100%;
+  overflow: auto;
+
+  color: black;
+  font-family: montserrat;
+  font-size: 40px;
+  font-weight: 600;
+  font-style: semi-bold;
+}
+
+.overlap-group-user {
+  height: 50px;
+  width: 15%;
+  margin-left: auto;
+  margin-right: 2%;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.box-user-head {
+  background-color: var(--white);
+  border-radius: 8px;
+  box-shadow: 0px 5px 10px 
+#00000033;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.flex-user{
+  display: flex;
+  flex-direction: row;  
+  height: 100%;
+}
+
+.user-img-head {
+  display: inline-block;
+  position: relative;
+  object-fit: fill;
+  height: 50px; 
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.text-username {
+  letter-spacing: 0;
+  line-height: 20px;
+  min-height: 20px;
+  white-space: wrap;
+
+  margin-top: auto;
+  margin-bottom: auto;
+
+  font-family: montserrat;
+  font-size: 25px;
+  font-weight: 500;
+  font-style: normal;
+  position: relative;
+  margin-left: 10%;
+}
+
+
+.button-connect {
+  background-color: #5b1b6e;
+  border-radius: 8px;
+  box-shadow: 2px 7px 5px 
+#00000040;
+  display: flex;
+  height: 50px;
+  width: 200px;
+  margin-right: 15%;
+}
+
+.button-connect-text {
+  letter-spacing: 0;  
+  white-space: nowrap;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  font-family: montserrat;
+  font-size: 30px;
+  font-weight: 400;
+  font-style: semi-bold;
+}
+
+
 
 .title-occupation {
   letter-spacing: 0;
@@ -36,22 +134,15 @@
   font-weight:    bold;
 }
 
-.tutor-profile-1 {
-  height: 50px;
-  left: 25px;
-  object-fit: scale-down;
-  position: absolute;
-  top: 11px;
-  width: 45px;
-}
-
 
 .flex-row {
-  align-items: flex-start;
   display: flex;
+  flex-direction: row;
   margin-top: 20px;
-  margin-left: 5%;
+  margin-left: 20%;
+  margin-right: auto;
 }
+
 
 .img-label-detail {
   align-items: center;
@@ -92,6 +183,7 @@
   min-height: 20px;
   min-width: 88px;
   white-space: nowrap;
+  text-align: left;
 
   color: gray;
   font-family: montserrat;
@@ -118,6 +210,7 @@
 }
 
 .select-occupation-1 {
+  text-align: left;
   letter-spacing: 0;
   line-height: 20px;
   margin-bottom: -5.24px;
@@ -127,51 +220,6 @@
 }
 
 
-.flex-col-1 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-left: 65px;
-  min-height: 316px;
-  position: relative;
-  width: 320px;
-}
-
-.button-connect {
-  align-items: center;
-  background-color: var(--west-side);
-  border-radius: 8px;
-  box-shadow: 2px 7px 5px 
-#00000040;
-  display: flex;
-  height: 65px;
-  min-width: 280px;
-  padding: 0 66.5px;
-}
-
-.medium-button {
-  height: 30px;
-  letter-spacing: 0;
-  line-height: 30px;
-  min-width: 147px;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.valign-text-bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.duration-text-container {
-  align-items: flex-start;
-  display: flex;
-  margin-left: 2%;
-  flex-direction: row;
-  position: relative;
-  width: 80%;
-}
 
 .duration-label {
   letter-spacing: 0;
@@ -197,7 +245,7 @@
   min-width: 100px;
   white-space: nowrap;
 
-  color: gray;
+  color: rgb(11, 11, 228);
   font-family: montserrat;
   font-size: 30px;
   font-weight: 500;
@@ -208,11 +256,12 @@
   letter-spacing: 0;
   line-height: 30px;
   margin-top: 1%;
-  margin-left: 5%;
+  margin-left: 20%;
   margin-bottom: 1%;
   min-width: 150px;
   white-space: nowrap;
 
+  text-align: left;
   color: black;
   font-family: montserrat;
   font-size: 30px;
@@ -220,27 +269,47 @@
   font-style: normal;
 }
 
+.overlap-group-more-info {
+  height: 300px;
+  width: 60%;
+  margin-left: 20%;
+  position: relative;
+}
+
+.box-more-info {
+  background-color: var(--white);
+  border-radius: 8px;
+  box-shadow: 0px 5px 10px 
+#00000033;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .detail-script {
   letter-spacing: 0;
-  line-height: 30px;
-  margin-bottom: 1%;
-  margin-left: 5%;
-  min-width: 100px;
-  white-space: nowrap;
+  line-height: 40px;
+  position: absolute;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  height: 85%;
+  width: 94%;
+  white-space: wrap;
+  inline-size: 94%;
+  overflow-wrap: break-word;
+  overflow: auto;
 
-  color: gray;
+
+  color: rgb(11, 11, 228);
   font-family: montserrat;
   font-size: 30px;
   font-weight: 500;
   font-style: normal;
 }
-
-
-
-
-
-
-
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
 
