--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -108,6 +108,28 @@
   margin-right: 15%;
 }
 
+.button-connected {
+  background-color: #2a7414;
+  border-radius: 8px;
+  box-shadow: 2px 7px 5px 
+#00000040;
+  display: flex;
+  height: 50px;
+  width: 200px;
+  margin-right: 15%;
+}
+
+.button-requested {
+  background-color: #e4b312;
+  border-radius: 8px;
+  box-shadow: 2px 7px 5px 
+#00000040;
+  display: flex;
+  height: 50px;
+  width: 200px;
+  margin-right: 15%;
+}
+
 .button-connect-text {
   letter-spacing: 0;  
   white-space: nowrap;
