--- a/frontend/src/components/NewPostPage/NewPost.css
+++ b/frontend/src/components/NewPostPage/NewPost.css
@@ -27,8 +27,6 @@
     font-size:      30px;
     font-weight:    normal;
 
-    align-items: flex-start;
-    align-self: flex-start;
     display: flex;
     position: relative;
   }
@@ -38,16 +36,15 @@
     display: flex;
     flex-direction: column;
     margin-left: 2%;
-    margin-top: 1%;
+    margin-top: 2%;
     position: relative;
     width: 60%;
   }
   
   .flex-row {
-    /*align-items: flex-end;*/
     display: flex;
+    flex-direction: row;
     position: relative;
-    /*min-width: 40px;*/
   }
   
   .overlap-group {
@@ -58,7 +55,7 @@
   .text-occupation {
    min-width: 280px;
    max-width: 300px;
-   height: 40px;
+   height: 45px;
    border: normal;
    border-radius: 10px;
    text-align: center;
@@ -99,8 +96,8 @@
     height: 50px;
     border-radius: 10px;
     text-align: center;
-    margin-top: 1%;
-    margin-left: 200px;
+    margin-top: 2%;
+    margin-left: 100px;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
    }
   
@@ -111,8 +108,8 @@
     height: 50px;
     border-radius: 10px;
     text-align: center;
-    margin-top: 1%;
-    margin-left: 200px;
+    margin-top: 2%;
+    margin-left: 100px;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
    }
 
@@ -177,11 +174,16 @@
 
   .medium-button {
     letter-spacing: 0;
-    line-height: 30px;
-    min-height: 30px;
-    min-width: 141px;
+    height: 100%;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
     text-align: center;
     white-space: nowrap;
+
+    font-family:    Montserrat, sans-serif;
+    font-size:      30px;
+    font-weight:    bold;
   }
   
   
