new reg and login

--- a/backend/src/views/edit.html
+++ b/backend/src/views/edit.html
@@ -9,7 +9,7 @@
       <h1>Chỉnh sửa hồ sơ</h1>
 
       <label>Tên đăng nhập</label><br>
-      <input type="text" size="25" id="user_name" name="user_name" /><br><br>
+      <input type="text" size="25" id="username" name="username" /><br><br>
 
       <label">Giới thiệu về bản thân</label><br>
       <input type="text" size="25" id="introduce" name="introduce"/><br><br>
