--- a/backend/src/views/login.html
+++ b/backend/src/views/login.html
@@ -9,7 +9,7 @@
       <h1 margin = "10cm">Đăng nhập</h1>
       
       <label>Tên</label><br>
-      <input type="text" size="25" id="user_name" name="user_name"/><br><br>
+      <input type="text" size="25" id="username" name="username"/><br><br>
 
       <label>Mật khẩu</label><br>
       <input type="text" size="25" id="password" name="password"/><br><br>
