--- a/backend/src/views/signup.html
+++ b/backend/src/views/signup.html
@@ -21,7 +21,7 @@
       <input type="text" size="25" id="email" name="email"/><br><br>
 
       <label>Tên đăng nhập</label><br>
-      <input type="text" size="25" id="user_name" name="user_name"/><br><br>
+      <input type="text" size="25" id="username" name="username"/><br><br>
 
       <label">Mật khẩu</label><br>
       <input type="text" size="25" id="password" name="password"/><br><br>
