--- a/backend/src/views/tutor_reg.html
+++ b/backend/src/views/tutor_reg.html
@@ -9,7 +9,7 @@
       <h1>Nâng cấp lên gia sư</h1>
 
       <label>Tên đăng nhập</label><br>
-      <input type="text" size="25" id="user_name" name="user_name" /><br><br>
+      <input type="text" size="25" id="username" name="username" /><br><br>
 
       <label">Chuyên ngành</label><br>
       <input type="text" size="25" id="major" name="major"/><br><br>
