--- a/frontend/src/components/EditProfilePage/EditProfileTutor.css
+++ b/frontend/src/components/EditProfilePage/EditProfileTutor.css
@@ -64,34 +64,66 @@
    display: none;
 }
 
-.user_type {
-   width: 5.21%;
+.user_type_user {
+   width: 100.21%;
    height: 3.7%;
    background: #FE9312;
    border-radius: 100px;
    align-items: center;
-   margin-top: 1%;
-   margin-left: 2.34%;
+   margin-top: 24%;
+   margin-left: 40.34%;
    text-align: center;
-   padding: 7px;
+   padding: 5px;
    color:white;
 }
 
-.user_name {
-   width: 10.41%;
+.user_type_student {
+   width: 100.21%;
+   height: 5.0%;
+   background: #FE9312;
+   border-radius: 100px;
+   align-items: center;
+   margin-top: 7%;
+   margin-left: 44.34%;
+   text-align: center;
+   padding: 5px;
+   color:white;
+}
+
+.user_name_user {
+   width: 60.41%;
    height: 3.7%;
    background: #FE9312;
    border-radius: 100px;
-   margin-top: 4.63%;
-   margin-left: 2.1%;
+   margin-top: 18.63%;
+   margin-left: 22.1%;
    text-align: center;
    color:white;
-   padding: 7px;
+   padding: 5px;
 }
 
-.label-intro{
-   margin-top: 10%;
-   margin-left: 2.34%;
+.user_name_student {
+   width: 60.41%;
+   height: 5.0%;
+   background: #FE9312;
+   border-radius: 100px;
+   margin-top: 31.63%;
+   margin-left: 28.1%;
+   text-align: center;
+   color:white;
+   padding: 5px;
+}
+
+.label_intro_user{
+   margin-top: 27.5%;
+   margin-left: 15.34%;
+   margin-bottom: 0.5%;
+}
+
+.label_intro_student{
+   margin-top: 45.5%;
+   width: 100%;
+   margin-left: 15.34%;
    margin-bottom: 0.5%;
 }
 
@@ -141,7 +173,7 @@
 
 .first_secure_label {
    margin-left: 85%;
-   margin-top: 135%;
+   margin-top: 157%;
    width: 100%;
 }
 
