--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -298,7 +298,7 @@
   position: relative;
 }
 
-.box-more-info {
+.box-outline-735 {
   background-color: var(--white);
   border-radius: 8px;
   box-shadow: 0px 5px 10px 
@@ -325,12 +325,133 @@
   overflow-wrap: break-word;
   overflow: auto;
 
-
   color: rgb(11, 11, 228);
   font-family: montserrat;
   font-size: 30px;
   font-weight: 500;
   font-style: normal;
+}
+
+.overlap-group-requests {
+  height: 400px;
+  width: 60%;
+  margin-left: 20%;
+  position: relative;
+  padding-top: 20px;
+}
+
+.flex-request-heads {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 2%;
+  margin-right: 2%;
+  height: 8%;
+  background-color: #f6f2f2;
+
+}
+.request-no-735{
+  width: 5%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+
+}
+.request-username-735{
+  width: 40%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+}
+.request-level-735{
+  width: 15%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+
+}
+.request-gender-735{
+  width: 10%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.request-accept-735{
+  width: 12%;
+  margin-left: 1%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.request-deny-735{
+  width: 12%;
+  color: rgb(102, 102, 102);
+  font-family: montserrat;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.button-request-accept-735 {
+  background-color: #FE9312;
+  width: 90%;
+  height: 80%;
+  border-radius: 10px;
+  text-align: center;
+  margin-left: 5%;
+  box-shadow: 1px 3px 3px 1px #9E9E9E;
+ }
+
+.button-request-deny-735 {
+  background-color: gray;
+  width: 70%;
+  height: 80%;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 1px 3px 3px 1px #9E9E9E;
+ }
+
+ .request-button-735 {
+  letter-spacing: 0;
+  height: 100%;
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: center;
+  white-space: nowrap;
+
+  font-family:    Montserrat, sans-serif;
+  font-size:      20px;
+  font-weight:    bold;
+}
+
+.request-list-735{
+  position: relative;
+  width: 100%;
+  height: 85%;
+  overflow-y: auto;
+}
+
+.flex-request-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+  margin-top:1%;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
