--- a/frontend/src/components/PostListPage/Search.css
+++ b/frontend/src/components/PostListPage/Search.css
@@ -1,12 +1,12 @@
 .search-frame40 {
+    position: sticky;
+    top: 70px;
     display: flex;
     height: 575px;
-    width: 25%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     padding-top: 20px;
     padding-left: 20px;
     background-color: #FFDD88;
-    position: sticky;
 }
 
 .text-search-frame40 {
@@ -83,7 +83,7 @@
 
 .button-occupation-ok40 {
     background-color: #FE9312;
-    width: 120px;
+    width: 145px;
     height: 50px;
     border-radius: 10px;
     text-align: center;
@@ -92,7 +92,7 @@
 
 .button-occupation-cancel40 {
     background-color: gray;
-    width: 120px;
+    width: 145px;
     height: 50px;
     border-radius: 10px;
     text-align: center;
