--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -45,7 +45,7 @@
 
 .overlap-group-user {
   height: 50px;
-  width: 15%;
+  width: 20%;
   margin-left: auto;
   margin-right: 2%;
   position: relative;
@@ -94,6 +94,7 @@
   font-style: normal;
   position: relative;
   margin-left: 10%;
+  overflow: hidden;
 }
 
 
@@ -105,7 +106,8 @@
   display: flex;
   height: 50px;
   width: 200px;
-  margin-right: 15%;
+  margin-left: 2%;
+  margin-right: auto;
 }
 
 .button-connected {
