--- a/frontend/src/components/PostListPage/PostItem.css
+++ b/frontend/src/components/PostListPage/PostItem.css
@@ -1,13 +1,75 @@
-.post-item-frame {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    left: 20px;
-    border-radius: 20px;
+.post-item-frame40 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 50px;
+    margin-top: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
+    height: 350px;
 
 
-    background-color: darkgrey;
+    background-color: #DDDDDD;
     
-    position: relative;
+    position:relative;
 }
+
+.post-item-grid-title40 {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-template-rows: 60px;
+}
+
+.group-user-grid40 {
+    display: grid;
+    grid-template-columns: 60px 200px;
+    grid-template-rows: 60px;
+}
+
+.username-post-item40 {
+    text-align: left;
+    vertical-align:middle;
+    font-size:xx-large;
+    font: bold;
+}
+
+.title-post-item40 {
+    padding-left: 20px;
+    width: 600px;
+    height: 60px;
+    border-radius: 10px;
+
+    background-color: white;
+
+    text-align:left;
+    vertical-align:middle;
+    font-size:xx-large;
+    font: bold;
+}
+
+
+.user-img-post-item40 {
+    display: inline-block;
+    position: relative;
+    object-fit: fill;
+    height: 60px; 
+    width: 60px;
+    border-radius: 30px;
+}
+
+.grid-2x3-subitem40 {
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
+    grid-template-rows: 70% 50%;
+}
+
+
+.img-label-detail40 {
+    margin-top: 20px;
+    align-items: center;
+    display: flex;
+    min-width: 320px;
+    width: 100;
+    height: 100;
+  }
