--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -78,13 +78,20 @@
    color:white;
 }
 
-.btn-edit {
+a:link {
+   text-decoration: none;
+   color: black;
+ }
+
+.btn_edit {
    width: 230px;
    height: 40px;
    background: white;
    margin-left: 10px;
    margin-top: 10px;
    border: 1px;
+   text-decoration: none;
+   color: red;
    border-radius: 100px;
    text-align: center;
    box-shadow: 1px 3px 3px 1px #9E9E9E;
