--- a/frontend/src/components/EditPostPage/EditPost.css
+++ b/frontend/src/components/EditPostPage/EditPost.css
@@ -20,7 +20,8 @@
   .label-thongtin {
     font-family:    Montserrat, sans-serif;
     font-size:      30px;
-    font-weight:    normal;
+    font-weight:    600;
+    color: rgb(11, 11, 228);
 
     display: flex;
     position: relative;
