--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -36,7 +36,7 @@
   inline-size: 100%;
   overflow: auto;
 
-  color: black;
+  color: rgb(11, 11, 228);
   font-family: montserrat;
   font-size: 40px;
   font-weight: 600;
@@ -44,10 +44,10 @@
 }
 
 .overlap-group-user {
-  height: 50px;
+  height: 70px;
   width: 20%;
   margin-left: auto;
-  margin-right: 2%;
+  margin-right: 1%;
   position: relative;
   flex-wrap: wrap;
 }
@@ -64,6 +64,15 @@
   width: 100%;
 }
 
+.box-user-own {
+  background-color: var(--white);
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 .flex-user{
   display: flex;
   flex-direction: row;  
@@ -73,8 +82,9 @@
 .user-img-head {
   display: inline-block;
   position: relative;
-  object-fit: fill;
-  height: 50px; 
+  object-fit: cover;
+  height: 70px; 
+  width: 70px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
@@ -89,11 +99,31 @@
   margin-bottom: auto;
 
   font-family: montserrat;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
   position: relative;
-  margin-left: 10%;
+  margin-left: 3%;
+  margin-right: 3%;
+  overflow: hidden;
+}
+
+.text-username-own {
+  letter-spacing: 0;
+  line-height: 30px;
+  min-height: 30px;
+  white-space: wrap;
+
+  margin-top: auto;
+  margin-bottom: auto;
+
+  font-family: montserrat;
+  font-size: 30px;
+  font-weight: 600;
+  font-style: normal;
+  color: #30be05;
+  position: relative;
+  margin-right: 3%;
   overflow: hidden;
 }
 
@@ -104,10 +134,10 @@
   box-shadow: 2px 7px 5px 
 #00000040;
   display: flex;
-  height: 50px;
-  width: 200px;
-  margin-left: 2%;
-  margin-right: auto;
+  height: 70px;
+  width: 10%;
+  margin-right: 2%;
+  position: relative;
 }
 
 .button-connected {
@@ -116,9 +146,9 @@
   box-shadow: 2px 7px 5px 
 #00000040;
   display: flex;
-  height: 50px;
+  height: 70px;
   width: 200px;
-  margin-right: 15%;
+  margin-right: 2%;
 }
 
 .button-requested {
@@ -127,9 +157,9 @@
   box-shadow: 2px 7px 5px 
 #00000040;
   display: flex;
-  height: 50px;
+  height: 70px;
   width: 200px;
-  margin-right: 15%;
+  margin-right: 2%;
 }
 
 .button-connect-text {
@@ -316,20 +346,21 @@
   letter-spacing: 0;
   line-height: 40px;
   position: absolute;
-  margin-top: 2%;
   margin-bottom: 2%;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: 2%;
+  margin-right: 2%;
   height: 85%;
   width: 94%;
   white-space: wrap;
   inline-size: 94%;
   overflow-wrap: break-word;
   overflow: auto;
+  text-align: left;
+  white-space: break-spaces;
 
   color: rgb(11, 11, 228);
   font-family: montserrat;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
 }
@@ -455,6 +486,50 @@
   margin-left: 2%;
   margin-right: 2%;
 }
+
+.edit-and-remove{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 70px;
+}
+
+.post-edit-remove-735{
+  display: inline-block;
+  width: 15%;
+  height: 70%;
+  margin-top: 3%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 2%;
+
+  align-self: center;
+  border: none !important;
+  color: rgb(255, 255, 255);
+  font-family: montserrat;
+  font-size: 30px;
+  font-weight: 500;
+  font-style: normal;
+
+}
+
+.button-edit-735 {
+  background-color: #FE9312;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 1px 3px 3px 1px #9E9E9E;
+ }
+
+.button-remove-735 {
+  background-color: gray;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 1px 3px 3px 1px #9E9E9E;
+ }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
 
