--- a/frontend/src/components/PostPage/Post.css
+++ b/frontend/src/components/PostPage/Post.css
@@ -46,7 +46,7 @@
 .overlap-group-user {
   height: 70px;
   width: 20%;
-  margin-left: auto;
+  margin-left: 3%;
   margin-right: 1%;
   position: relative;
   flex-wrap: wrap;
@@ -91,8 +91,8 @@
 
 .text-username {
   letter-spacing: 0;
-  line-height: 20px;
-  min-height: 20px;
+  line-height: 30px;
+  min-height: 30px;
   white-space: wrap;
 
   margin-top: auto;
@@ -118,7 +118,7 @@
   margin-bottom: auto;
 
   font-family: montserrat;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   font-style: normal;
   color: #30be05;
@@ -136,7 +136,7 @@
   display: flex;
   height: 70px;
   width: 10%;
-  margin-right: 2%;
+  margin-left: 1%;
   position: relative;
 }
 
@@ -148,7 +148,7 @@
   display: flex;
   height: 70px;
   width: 200px;
-  margin-right: 2%;
+  margin-left: 1%;
 }
 
 .button-requested {
@@ -159,7 +159,7 @@
   display: flex;
   height: 70px;
   width: 200px;
-  margin-right: 2%;
+  margin-left: 1%;
 }
 
 .button-connect-text {
