--- a/frontend/src/components/PostListPage/Search.css
+++ b/frontend/src/components/PostListPage/Search.css
@@ -24,7 +24,7 @@
 
 .search-sub-grid-layout40 {
     display: grid;
-    grid-template-columns: 145px 10px 145px;
+    grid-template-columns: 150px 150px;
     grid-template-rows: 60px;
     align-items: center;
 }
@@ -42,7 +42,9 @@
     border: none;
     border-radius: 2px;
     height: 40px;
-    width: 300px;
+    width: 290px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .search-input-full::placeholder {
     color: #595959;
@@ -50,8 +52,10 @@
 }
 
 .search-choice-haft40 {
-    width: 145px;
+    width: 140px;
     height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
     /*outline: none;*/
     border: normal;
     border-radius: 2px;
@@ -60,8 +64,10 @@
 }
 
 .search-choice-full40 {
-    width: 300px;
+    width: 290px;
     height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
     /*outline: none;*/
     border: normal;
     border-radius: 2px;
@@ -85,8 +91,10 @@
 
 .button-occupation-ok40 {
     background-color: #FE9312;
-    width: 145px;
+    width: 140px;
     height: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
@@ -94,8 +102,10 @@
 
 .button-occupation-cancel40 {
     background-color: gray;
-    width: 145px;
+    width: 140px;
     height: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 3px 3px 1px #9E9E9E;
