--- a/frontend/src/components/PostListPage/PostItem.css
+++ b/frontend/src/components/PostListPage/PostItem.css
@@ -8,11 +8,12 @@
     margin-left: 40px;
     margin-right: 40px;
     height: 350px;
+    width:950px;
 
 
     background-color: #DDDDDD;
     
-    position:relative;
+    position:static;
 }
 
 .post-item-grid-title40 {
@@ -77,4 +78,19 @@
     min-width: 320px;
     width: 100;
     height: 100;
-  }
+}
+
+.placeholder-text-40 {
+    align-items: flex-end;
+    display: flex;
+    height: 15px;
+    margin-left: 1.03px;
+    margin-top: 14px;
+    width: 220px;
+  
+    color: rgb(105, 102, 102);
+    font-family: montserrat;
+    font-size: 30px;
+    font-weight: 600;
+    font-style: normal;
+}
