--- a/frontend/src/components/PostListPage/Posts.css
+++ b/frontend/src/components/PostListPage/Posts.css
@@ -1,8 +1,11 @@
-.posts-grid-layout40 {
-    display: grid;
-    grid-template-columns:100%;
-    grid-template-rows: min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content;
+.post-items-list-layout40 {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .posts-grid-main-layout40 {
