--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -209,6 +209,113 @@ a:link {
    margin-right: 8px;
 }
 
+.request-no-553{
+   width: 5%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ 
+ }
+
+ .request-username-553{
+   width: 40%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ }
+
+ .request-level-553{
+   width: 15%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ 
+ }
+ .request-gender-553{
+   width: 10%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ }
+
+
+ .request-accept-553{
+   width: 12%;
+   margin-left: 1%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ }
+ 
+ .request-deny-553{
+   width: 12%;
+   color: rgb(102, 102, 102);
+   font-family: montserrat;
+   font-size: 20px;
+   font-weight: 400;
+   font-style: normal;
+ }
+ 
+ .button-request-accept-553 {
+   background-color: #FE9312;
+   width: 90%;
+   height: 80%;
+   border-radius: 10px;
+   text-align: center;
+   margin-left: 5%;
+   box-shadow: 1px 3px 3px 1px #9E9E9E;
+  }
+ 
+ .button-request-deny-553 {
+   background-color: gray;
+   width: 70%;
+   height: 80%;
+   border-radius: 10px;
+   text-align: center;
+   box-shadow: 1px 3px 3px 1px #9E9E9E;
+  }
+ 
+  .request-button-553 {
+   letter-spacing: 0;
+   height: 100%;
+   width: 100%;
+   margin-top: auto;
+   margin-bottom: auto;
+   text-align: center;
+   white-space: nowrap;
+ 
+   font-family:    Montserrat, sans-serif;
+   font-size:      20px;
+   font-weight:    bold;
+ }
+ 
+ .request-list-553{
+   position: relative;
+   width: 100%;
+   height: 85%;
+   overflow-y: auto;
+ }
+ 
+ .flex-request-line-553 {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   height: 50px;
+   margin-top:1%;
+   margin-left: 2%;
+   margin-right: 2%;
+ }
+
 .info-user {
    width: 300px;
 }
@@ -224,3 +331,5 @@ a:link {
 .cert-img {
    
 }
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
