--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -67,6 +67,19 @@
     justify-content:center;
     font-size: 12px;
 }
+.fix446{
+    align-items:center; 
+    text-align:center;
+}
+.fix447{
+    list-style:none;
+    padding:10px 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    direction:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 12px;
+}
 li{
     text-align: center;
     cursor:pointer;
